discussion/kv_engine/181596/181596_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Don't submit disabled events to the audit daemon

Change-Id: I1eb473c4cc6cfa27597cd59b872e39dc06bcde9e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-20 13:40:38.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-20 13:46:58.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22774/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22774/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11057/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11057/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24591/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24591/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23354/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23354/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23756/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23756/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11153/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11153/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31773/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31773/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20578/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20578/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21323/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26: error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
    if (audit_eventid != NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON) {
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21323/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21323/ )
----------------------------------------------------------------------------------------------------------------------
